--- a/src/components/hero3/hero3.css
+++ b/src/components/hero3/hero3.css
@@ -128,3 +128,117 @@
   width: 100%;
   height: 600px;
 }
+
+/* Responsiveness */
+
+@media screen and (max-width: 500px) {
+  .hero3 {
+    width: 100%;
+  }
+
+  .hero3-cont {
+    width: 86%;
+    margin: 0px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 89px;
+    padding-bottom: 57px;
+  }
+
+  .see-all {
+    display: none;
+    align-items: center;
+    gap: 525px;
+  }
+
+  .bg {
+    display: inline-flex;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 60px;
+    width: 100%;
+  }
+
+  .bg-text {
+    width: 100%;
+    display: inline-flex;
+    height: 260.663px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    flex-shrink: 0;
+  }
+
+  .bg-text-main {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10.952px;
+    width: 100%;
+  }
+
+  .bg-text-main h1 {
+    width: 90%;
+    color: #0075ff;
+    font-family: Work Sans;
+    font-size: 22.394px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 32.051px; /* 143.125% */
+  }
+
+  .bg-text-main p {
+    width: 100%;
+    color: #1e2027;
+    font-family: Work Sans;
+    font-size: 10.952px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20.316px; /* 185.5% */
+  }
+
+  .bg-text-sub {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10.952px;
+  }
+
+  .bg-text-sub h2 {
+    color: #0075ff;
+    font-family: Work Sans;
+    font-size: 13.996px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22.604px; /* 161.5% */
+  }
+
+  .bg-text-sub button {
+    display: flex;
+    padding: 5.476px 13.143px;
+    justify-content: center;
+    align-items: center;
+    gap: 5.476px;
+    border-radius: 4.381px;
+    background: #0075ff;
+    color: #fff;
+    font-family: Work Sans;
+    font-size: 13.996px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22.604px; /* 161.5% */
+  }
+
+  .bg-pic {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .bg-pic img {
+    width: 390px;
+    height: 445.839px;
+  }
+}
