--- a/src/components/pricing/pricing.css
+++ b/src/components/pricing/pricing.css
@@ -1,5 +1,6 @@
 .pricing {
   width: 100%;
+  margin-bottom: 98px;
 }
 
 .pricing-cont {
@@ -124,4 +125,151 @@
   line-height: 41.277px;
   cursor: pointer;
   border-style: none; /* 127.334% */
+}
+
+/* Responsiveness */
+
+@media screen and (max-width: 500px) {
+  .pricing {
+    width: 100%;
+  }
+
+  .pricing-cont {
+    /* padding: 64px 30px 37px 30px; */
+    width: 78%;
+    margin: 0px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .pricing-head {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .pricing-head h1 {
+    color: #0075ff;
+    font-family: Work Sans;
+    font-size: 30.5px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 43.654px; /* 143.125% */
+  }
+
+  .pricing-head p {
+    color: #1e2027;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 14.596px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21.895px; /* 150% */
+  }
+
+  .price-body {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 31.26px;
+  }
+
+  .price-item {
+    width: 100%;
+    height: auto;
+    border-radius: 13.349px;
+    background: #f9f9f9;
+    box-shadow: 0px 3.37943px 12.67288px 0px rgba(51, 51, 51, 0.13);
+  }
+
+  .price-item-img {
+    width: 100%;
+    flex-shrink: 0;
+    border-radius: 13.241px 13.241px 0px 0px;
+  }
+
+  .price-item-img img {
+    width: 100%;
+  }
+
+  .price-item-text {
+    width: 95%;
+    margin: 0px auto;
+    padding: 10px;
+    /* height: 302.326px; */
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+  }
+
+  .price-item-tile {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-bottom: 15px;
+  }
+
+  .price-item-tile h1 {
+    color: #292d32;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 26.481px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 48.549px; /* 183.333% */
+  }
+
+  .price-item-tile span {
+    color: #0075ff;
+    font-family: Work Sans;
+    font-size: 27.035px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 29.791px; /* 110.193% */
+  }
+
+  .price-item-details {
+    width: 100%;
+    height: auto;
+    flex-shrink: 0;
+  }
+
+  .price-item-details ul {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    height: auto;
+  }
+
+  .price-item-details ul li {
+    list-style-type: circle;
+    color: #292d32;
+    font-family: Work Sans;
+    font-size: 14.344px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 23.171px; /* 161.538% */
+  }
+
+  .price-item button {
+    margin: 10px auto;
+    width: 90%;
+    display: flex;
+    padding: 10px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    background: #0075ff;
+    color: #fff;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 16.897px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21.516px; /* 127.334% */
+  }
 }
