--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -16,6 +16,11 @@
   gap: 8px;
 }
 
+.header-cont .logo-name .main-image {
+  display: flex;
+  align-items: center;
+}
+
 .logo-name h1 {
   color: #004bb0;
   font-family: Work Sans;
@@ -32,6 +37,10 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+}
+
+img.menu {
+  display: none;
 }
 
 .list-items {
@@ -146,6 +155,10 @@ form input {
     justify-content: space-between;
     width: 100%;
     transition: 1s all ease;
+  }
+
+  img.menu {
+    display: block;
   }
 
   .active-mobile .list-items {
