--- a/src/components/subscribe/subscribe.css
+++ b/src/components/subscribe/subscribe.css
@@ -76,3 +76,82 @@
   cursor: pointer;
   border-style: none;
 }
+
+/* Responsiveness */
+
+@media screen and (max-width: 500px) {
+  .subscribe {
+    width: 100%;
+    background-color: #fff;
+  }
+
+  .subscribe-cont {
+    width: 100%;
+    display: inline-flex;
+    padding: 31px 34.743px 35px 35px;
+    flex-direction: column;
+    align-items: center;
+    gap: 22.503px;
+  }
+
+  .subtitle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3.244px;
+  }
+
+  .subtitle h1 {
+    color: #0075ff;
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 18.574px;
+  }
+
+  .subscribe p {
+    color: #263238;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 144%;
+    letter-spacing: -0.1px;
+  }
+
+  .subbody {
+    display: flex;
+    flex-direction: row;
+    gap: 1px;
+  }
+
+  .subbody input {
+    display: flex;
+    width: 276px;
+    padding: 13.56px 185.557px 13.56px 27.14px;
+    justify-content: center;
+    align-items: center;
+    gap: 7.137px;
+  }
+
+  .subbody button {
+    display: flex;
+    padding: 11.419px 17.128px;
+    align-items: flex-start;
+    gap: 7.137px;
+    border-radius: 0px 5.709px 5.709px 0px;
+    border: 0.714px solid #0075ff;
+    background: #0075ff;
+    box-shadow: 0px 2.85472px 10.70521px 0px rgba(51, 51, 51, 0.13);
+    color: #fff;
+    font-family: Work Sans;
+    font-size: 11.419px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 144%;
+    letter-spacing: -0.343px;
+  }
+}
