--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -145,3 +145,159 @@
   line-height: 144%;
   letter-spacing: -0.48px;
 }
+
+/* Responsiveness */
+
+@media screen and (max-width: 500px) {
+  .footer {
+    width: 100%;
+    background: #106fdf;
+  }
+
+  .footer-cont {
+    display: flex;
+    flex-direction: column;
+    gap: 46px;
+    width: 87.9%;
+    margin: 0% auto;
+    padding: 40px 0px;
+  }
+
+  .footer-main {
+    /* float: left; */
+    display: flex;
+    flex-direction: column;
+    gap: 47px;
+  }
+
+  .swift {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 9px;
+  }
+
+  .logo-name {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .logo-name .name h1 {
+    color: #fff;
+    font-family: Work Sans;
+    font-size: 13.053px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  .logo-name span {
+    color: #fff;
+    font-family: Work Sans;
+    font-size: 13.053px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+
+  .swift p {
+    color: #fff;
+    font-family: Work Sans;
+    font-size: 10.877px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 35%;
+  }
+  .lists-cont {
+    display: flex;
+    flex-direction: row;
+    gap: 56px;
+  }
+
+  .lists-cont ul {
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    align-items: flex-start;
+    gap: 16px;
+  }
+
+  .lists-cont ul li {
+    list-style-type: none;
+    color: #fff;
+    font-family: Work Sans;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 144%;
+    letter-spacing: -0.36px;
+  }
+
+  .lists-cont div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+  }
+
+  .lists-cont div h1 {
+    color: #fff;
+    font-family: Work Sans;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
+
+  .socials {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    margin: 0px auto;
+    gap: 3px;
+  }
+
+  .socials h1 {
+    color: #fff;
+    font-family: Work Sans;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+
+  .social-logos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+  }
+
+  .social-logos div {
+    display: flex;
+    width: 36px;
+    height: 36px;
+    padding: 6.003px 6.001px 5.997px 5.999px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 185.994px;
+    background: #fff;
+    box-shadow: 0px 0px 25.50000762939453px 0px rgba(0, 0, 0, 0.05);
+  }
+
+  .copyright {
+    margin: 0px auto;
+  }
+  .copyright p {
+    color: #fff;
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 144%;
+    letter-spacing: -0.48px;
+  }
+}
