--- a/src/components/subscribe/subscribe.css
+++ b/src/components/subscribe/subscribe.css
@@ -87,7 +87,6 @@
 
   .subscribe-cont {
     width: 100%;
-<<<<<<< HEAD
     display: inline-flex;
     padding: 31px 34.743px 35px 35px;
     flex-direction: column;
@@ -100,7 +99,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-=======
     display: flex;
     padding: 54px;
     flex-direction: column;
@@ -116,7 +114,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
->>>>>>> db6aa11 (okay)
     gap: 3.244px;
   }
 
@@ -126,11 +123,8 @@
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
-<<<<<<< HEAD
     line-height: 18.574px;
-=======
     line-height: 18.574px; /* 116.089% */
->>>>>>> db6aa11 (okay)
   }
 
   .subscribe p {
@@ -140,11 +134,8 @@
     font-size: 10px;
     font-style: normal;
     font-weight: 400;
-<<<<<<< HEAD
     line-height: 144%;
-=======
     line-height: 144%; /* 14.4px */
->>>>>>> db6aa11 (okay)
     letter-spacing: -0.1px;
   }
 
@@ -161,13 +152,20 @@
     justify-content: center;
     align-items: center;
     gap: 7.137px;
-<<<<<<< HEAD
-=======
     border-radius: 5.709px 0px 0px 5.709px;
     border: 0.714px solid #0075ff;
->>>>>>> db6aa11 (okay)
   }
 
+  .subbody input::placeholder {
+    color: #263238;
+    font-family: Work Sans;
+    font-size: 11.419px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 144%; /* 16.443px */
+    letter-spacing: -0.343px;
+    width: 200%;
+  }
   .subbody button {
     display: flex;
     padding: 11.419px 17.128px;
@@ -182,11 +180,8 @@
     font-size: 11.419px;
     font-style: normal;
     font-weight: 500;
-<<<<<<< HEAD
     line-height: 144%;
-=======
     line-height: 144%; /* 16.443px */
->>>>>>> db6aa11 (okay)
     letter-spacing: -0.343px;
   }
 }
