--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+:root {
+  --background: #fff;
+  --text-primary: #121314;
+  --text-secondary: #0075ff;
+  --accent: #0075ff;
+  --sub-secondary: #0d0a0a;
+  --prices: #d8d8d8;
+  --testimonial: #fff;
+}
+[data-theme="dark"] {
+  --background: #121212;
+  --text-primary: #d8d8d8;
+  --text-secondary: #0867d7;
+  --accent: #0867d7;
+  --sub-secondary: #d8d8d8;
+  --prices: #36383a;
+  --testimonial: #333;
+}
 * {
   font-family: "Poppins", sans-serif;
   font-family: "Work Sans", sans-serif;
